[package]
name = "cybele-judicis"
version = "0.1.0"
edition = "2021"

[dependencies]

cpal = "0.15.3"
hound = "3.5.1"
rubato = "0.16.1"
dasp = "0.11.0"
symphonia = "0.5.4"

raylib = "5.0.2"
egui = "0.31.0"
eframe = "0.31.0"


mlua = { version = "0.10", features = ["lua54", "vendored"] }
anyhow = "1.0.96"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
